<resources>
    <string name="app_name">Movie tracker</string>
    <string name="title_home">Home</string>
    <string name="title_reviews">Reviews</string>

    <string name="add_button">+</string>
    <string name="new_review">Add a new movie review</string>
    <string name="name">Name of the movie</string>
    <string name="description">Description of the movie</string>
    <string name="date">Date I watch the movie</string>
    <string name="cowatcher">People I watch the movie with</string>
    <string name="add_review">Add a new review</string>
    <string name="expand_card_view">Expand card view</string>
    <string name="rating">Rating of the movie</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="lastMovie">The last movie I saw</string>
    <string name="top3">My top 3</string>
    <string name="submit">Submit</string>
</resources>